[package]
name = "download_bt_specs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_debug"] }
regex = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
serde_json = "1.0"
tempfile = "3.3"
